@@ -70,13 +70,13 @@ public class AdbDevice {
 			throws InstallException {
 		adb.reinstall(name,  pathApp);
 	}
-	
+
 	public void reinstall(String pathApp, boolean autoStart)
 			throws InstallException {
 		adb.reinstall(name,  pathApp,autoStart);
 	}
-	
-	
+
+
 	@Deprecated
 	public void reinstall(String app, String activity, String pathApp)
 			throws InstallException {
@@ -142,6 +142,10 @@ public class AdbDevice {
 
 	public void sendKeyCode(int keyCode) {
 		adb.sendKeyCode(this, keyCode);
+	}
+
+	public void clearTemp() {
+		adb.clearTemp(this);
 	}
 
 	@Override
